--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,9 @@
-# Core Dependencies
-requests==2.32.5
-pymongo==4.15.2
-pandas==2.3.3
-numpy==2.3.3
-
-# Technical Analysis
+requests==2.32.3
+pymongo==4.6.1
+pandas==2.1.4
+numpy==1.26.2
 ta==0.11.0
-scipy==1.16.2
-scikit-learn==1.7.2
-
-# Data Processing
-python-dateutil==2.9.0.post0
-pytz==2025.2
-
-# Note: Other packages (yfinance, fastapi, textblob) not needed for serverless setup
-# Vercel serverless functions don't need web frameworks
+scipy==1.11.4
+scikit-learn==1.3.2
+python-dateutil==2.8.2
+pytz==2024.1
